Fix overflow content

--- a/styles/layout.less
+++ b/styles/layout.less
@@ -159,7 +159,9 @@ h6, .h6 {
 /*
  * Blog posts
  */
-
+.blog-content {
+  overflow-x: auto;
+}
 .blog-post {
   margin-bottom: 60px;
 }
